# mediumvec

./: Cargo.toml  README.md
src/: lib.rs  pointer_vec.rs  vec32.rs
