[package]
name = "mediumvec"
version = "1.0.3"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT / Apache-2.0"
description = "Vector types optimized for space, including a 32-bit Vec"
repository = "https://github.com/mbrubeck/mediumvec"
documentation = "https://docs.rs/mediumvec"
keywords = ["vec", "small", "collection", "smallvec", "size"]
categories = ["data-structures"]
readme = "README.md"
