[package]
name = "mediumvec"
version = "1.3.1"
authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
license = "MIT OR Apache-2.0"
description = "Vector types optimized for space, including a 32-bit Vec"
repository = "https://github.com/mbrubeck/mediumvec"
documentation = "https://docs.rs/mediumvec"
keywords = ["vec", "small", "collection", "smallvec", "size"]
categories = ["data-structures"]
readme = "README.md"
edition = "2021"
